# web_speedtest

./: .gitignore  Cargo.toml  config.example.toml  config.toml  index.html  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: build-release.yml
deploy/systemd/: README.md  web_speed.service  web_speedtest.service
docs/superpowers/plans/: 2026-05-16-domain-speed-test-implementation.md
docs/superpowers/specs/: 2026-05-16-domain-speed-test-design.md
frontend/: index.html
scripts/: process-index.mjs
src/: app.rs  config.rs  ip.rs  lib.rs  main.rs  models.rs  store.rs
